# citl-raspi-starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/accessibility/: live_captions_vosk.py  ocr_read.py  text_simplify.py  translate_argos.py
apps/c_hello/: main.c  test_main.c
apps/python_hello/: hello_stakeholders.py
apps/python_llm/: llm_echo.py
apps/python_tts/: piper_say.py
build-rpi/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  rpi_demo
cmake/toolchains/: armhf.cmake
python/: app_llm_tts.py  requirements-ocr.txt  requirements-simplify.txt  requirements-tts.txt
scripts/: bootstrap_wsl.sh  fix_all.sh  get_assets.sh  one_time_setup.sh  quickstart_wsl.sh  run_qemu_aarch64.sh  run_qemu_armhf.sh  windows_bootstrap.ps1  windows_smoke.ps1
src/: main.c
tests/: test_main.c
